added login and register urls
