# src/main/java/ru/skypro/homework/controller/AuthController.java
@@ -1,0 +1,44 @@
+package ru.skypro.homework.controller;
+
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RestController;
+import ru.skypro.homework.dto.LoginReq;
+import ru.skypro.homework.dto.ReqReq;
+import ru.skypro.homework.dto.Role;
+import ru.skypro.homework.service.AuthService;
+
+import static ru.skypro.homework.dto.Role.USER;
+
+@Slf4j
+@RestController
+public class AuthController {
+
+    private final AuthService authService;
+
+    public AuthController(AuthService authService) {
+        this.authService = authService;
+    }
+
+    @PostMapping("/login")
+    public ResponseEntity<?> login(@RequestBody LoginReq req) {
+        if (authService.login(req.getUsername(), req.getPassword())) {
+            return ResponseEntity.ok().build();
+        } else {
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+        }
+    }
+
+    @PostMapping("/register")
+    public ResponseEntity<?> register(@RequestBody ReqReq req) {
+        Role role = req.getRole() == null ? USER : req.getRole();
+        if (authService.register(req.getUsername(), req.getPassword(), role)) {
+            return ResponseEntity.ok().build();
+        } else {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
+        }
+    }
+}
