# src/main/java/ru/skypro/homework/dto/ReqReq.java
@@ -1,0 +1,10 @@
+package ru.skypro.homework.dto;
+
+import lombok.Data;
+
+@Data
+public class ReqReq {
+    private String password;
+    private String username;
+    private Role role;
+}
